Broke out "classes" into different js files for easier navigation during development.

--- a/francisquest.html
+++ b/francisquest.html
@@ -32,4 +32,13 @@
 <script src="content/js/common/jquery-1.11.3.min.js"></script>
 <script src="content/js/common/modal.js"></script>
 <script src="content/js/vector2d.js"></script>
+<script src="content/js/gamevariables.js"></script>
+<script src="content/js/rectangle.js"></script>
+<script src="content/js/camera.js"></script>
+<script src="content/js/player.js"></script>
+<script src="content/js/enemy.js"></script>
+<script src="content/js/button.js"></script>
+<script src="content/js/battlescene.js"></script>
+<script src="content/js/map.js"></script>
+<script src="content/js/textwriter.js"></script>
 <script src="content/js/francisquest.js"></script>
