Changed name of gamevariables to init. Added item class placeholder. This will be used for things such as potions.

--- a/francisquest.html
+++ b/francisquest.html
@@ -32,7 +32,7 @@
 <script src="content/js/common/jquery-1.11.3.min.js"></script>
 <script src="content/js/common/modal.js"></script>
 <script src="content/js/vector2d.js"></script>
-<script src="content/js/gamevariables.js"></script>
+<script src="content/js/init.js"></script>
 <script src="content/js/rectangle.js"></script>
 <script src="content/js/camera.js"></script>
 <script src="content/js/player.js"></script>
