Added very simple inventory system. Currently only has health potions.

--- a/francisquest.html
+++ b/francisquest.html
@@ -5,6 +5,7 @@
         Francis Quest
     </title>
     <link rel="stylesheet" href="content/css/francis.css"/>
+    <link href="content/css/modal.css" type="text/css" rel="stylesheet" />
 <meta charset="UTF-8">
 </head>
 <body id="MAIN">
@@ -28,13 +29,14 @@
 
 </html>
 
-<link href="content/css/modal.css" type="text/css" rel="stylesheet" />
+
 <script src="content/js/common/jquery-1.11.3.min.js"></script>
 <script src="content/js/common/modal.js"></script>
 <script src="content/js/vector2d.js"></script>
 <script src="content/js/init.js"></script>
 <script src="content/js/rectangle.js"></script>
 <script src="content/js/camera.js"></script>
+<script src="content/js/item.js"></script>
 <script src="content/js/player.js"></script>
 <script src="content/js/enemy.js"></script>
 <script src="content/js/button.js"></script>
