Moving code around into better "classes"

--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
         <div id="inner">
             <h1>Francis Quest</h1>
             <p>
-                An RPG starring Francis (or Frances) on his (or her) adventure.<br />
+                Francis has lost his/her favorite treasure chest in the great plains.<br/>
+                You must quest to retrieve it while fighting or avoiding baddies along the way!<br/>
+                Press <b>TAB</b> to access your inventory.<br/>
                 <b>Click the image below to begin your quest!</b>
             </p>
             <img src='content/images/tiny32.png' onclick="window.open('francisquest.html')" style='cursor:pointer' />
-            <p>
-                Bad Guys actually fight back now!
-            </p>
-
+             <p>
+                 This is a game written entirely in Javascript with no 3rd party game engine libraries<br/>
+                <a href="https://github.com/atolVerderben/FrancisQuest">GitHub Repository</a></br/>
+             </p>
         </div> <!-- End Inner -->
     </div> <!-- End Outer -->
 </body>
