No more random encounters! Monsters move on the overworld and attack on contact. Random movement currently.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <p>
                 Francis has lost his/her favorite treasure chest in the great plains.<br/>
                 You must quest to retrieve it while fighting or avoiding baddies along the way!<br/>
-                Press <b>TAB</b> to access your inventory.<br/>
+                Press <b>I</b> to access your inventory.<br/>
                 <b>Click the image below to begin your quest!</b>
             </p>
             <img src='content/images/tiny32.png' onclick="window.open('francisquest.html')" style='cursor:pointer' />
