Updated game to allow continuing to different "levels" by just increasing the amount of enemies, enemy health, and size of the map.

--- a/index.html
+++ b/index.html
@@ -9,12 +9,21 @@
     <div id="mainOuter">
         <div id="inner">
             <h1>Francis Quest</h1>
+            <h5>Objective</h5>
             <p>
                 Francis has lost his/her favorite treasure chest in the great plains.<br/>
                 You must quest to retrieve it while fighting or avoiding baddies along the way!<br/>
-                Press <b>I</b> to access your inventory.<br/>
-                <b>Click the image below to begin your quest!</b>
+                Once the treasure has been collected you may choose to continue your adventure where the map increases in size and the enemies increase in number and health! See how long you can last!<br/>
             </p>
+            <h5>Controls</h5>
+            <p>
+                <b>Arrow Keys</b>: Controls Movement<br/>
+                <b>Mouse</b>: Used to interact with menus<br/>
+                <b>I</b>: Access your Inventory. <span class="red">Under Construction, but does function</span><br/>
+                <b>P</b>: Pause the game<br/>
+            </p>
+                <b>Click the image below to begin your quest!</b>
+            
             <img src='content/images/tiny32.png' onclick="window.open('francisquest.html')" style='cursor:pointer' />
              <p>
                  This is a game written entirely in Javascript with no 3rd party game engine libraries<br/>
