Started work on inventory class

--- a/francisquest.html
+++ b/francisquest.html
@@ -36,6 +36,7 @@
 <script src="content/js/init.js"></script>
 <script src="content/js/rectangle.js"></script>
 <script src="content/js/camera.js"></script>
+<script src="content/js/inventory.js"></script>
 <script src="content/js/item.js"></script>
 <script src="content/js/player.js"></script>
 <script src="content/js/enemy.js"></script>
