Added stamina system to the game. Updated max health so you can't just keep drinking potions. Added REST command during battle to work with the new stamina system.

--- a/francisquest.html
+++ b/francisquest.html
@@ -18,11 +18,20 @@
 
     <!-- Pause Menu-->
     <div id="divLicense" style="display:none"> <!-- Pause Menu-->
-        <h4>Paused (Press "P" to Resume)</h4>
+        <h4>Paused (Press "P" or "ESC" to Resume)</h4>
+        <p>
+            <h5>Controls</h5>
+            <p>
+                <b>Arrow Keys</b>: Controls Movement<br/>
+                <b>Mouse</b>: Used to interact with menus<br/>
+                <b>I</b>: Access your Inventory.<br/>
+                <b>Esc or P</b>: Pause the game<br/>
+            </p>
+        </p>
         <p>
             <h5>About Francis Quest</h5>
-            Art credit <a href="http://opengameart.org/content/tiny-16-basic">Lanea Zimmerman.</a><br />
-            Provided under <a href="content/licenses/OGA-BY-3.0.txt">OGA By 3.0 license</a>
+            Art credit <a href="http://opengameart.org/content/tiny-16-basic" target="_blank">Lanea Zimmerman.</a><br />
+            Provided under <a href="content/licenses/OGA-BY-3.0.txt" target="_blank">OGA By 3.0 license</a>
         </p>
     </div>
 </body>
