--- a/index.html
+++ b/index.html
@@ -19,8 +19,22 @@
             <p>
                 <b>Arrow Keys</b>: Controls Movement<br/>
                 <b>Mouse</b>: Used to interact with menus<br/>
-                <b>I</b>: Access your Inventory. <span class="red">Under Construction, but does function</span><br/>
-                <b>P</b>: Pause the game<br/>
+                <b>I</b>: Access your Inventory.<br/>
+                <b>Esc or P</b>: Pause the game<br/>
+            </p>
+            <h5>Features</h5>
+            <p>
+                <ul>
+                    <li>
+                        Randomly placed treasure to "win" each level
+                    </li>
+                    <li>
+                        Stamina system that can be recharged by standing still
+                    </li>
+                    <li>
+                        Health and Stamina increase with each level (for both the player and enemies)
+                    </li>
+                </ul>
             </p>
                 <b>Click the image below to begin your quest!</b>
             
