--- a/francisquest.html
+++ b/francisquest.html
@@ -17,7 +17,7 @@
 <canvas id="gameCanvas" width=800 height=400 style="position:absolute;z-index: 1"></canvas>
 
     <!-- Pause Menu-->
-    <div id="divLicense" style="display:none"> <!-- Pause Menu-->
+    <div id="divLicense" style="display:none">
         <h4>Paused (Press "P" or "ESC" to Resume)</h4>
         <p>
             <h5>Controls</h5>
