--- a/francisquest.html
+++ b/francisquest.html
@@ -18,14 +18,16 @@
 
     <!-- Pause Menu-->
     <div id="divLicense" style="display:none">
-        <h4>Paused (Press "P" or "ESC" to Resume)</h4>
+        
+        <div style="text-align:center;cursor:pointer;" onclick="Game.togglePause()"><h1>Paused</h1></div>
+
         <p>
             <h5>Controls</h5>
             <p>
                 <b>Arrow Keys</b>: Controls Movement<br/>
                 <b>Mouse</b>: Used to interact with menus<br/>
                 <b>I</b>: Access your Inventory.<br/>
-                <b>Esc or P</b>: Pause the game<br/>
+                <b>Esc or P</b>: Pause/Resume the game<br/>
             </p>
         </p>
         <p>
@@ -33,6 +35,9 @@
             Art credit <a href="http://opengameart.org/content/tiny-16-basic" target="_blank">Lanea Zimmerman.</a><br />
             Provided under <a href="content/licenses/OGA-BY-3.0.txt" target="_blank">OGA By 3.0 license</a>
         </p>
+        <div style="text-align:center;text-decoration:underline;color:#597dce;cursor:pointer" onclick="Game.togglePause()">
+            Resume
+        </div>
     </div>
 </body>
 
