Added visual for stamina increase.

--- a/francisquest.html
+++ b/francisquest.html
@@ -24,10 +24,10 @@
         <p>
             <h5>Controls</h5>
             <p>
-                <b>Arrow Keys</b>: Controls Movement<br/>
+                <b>I / E</b>: Access your Inventory.<br/>
+                <b>Esc / P</b>: Pause/Resume the game<br/>
                 <b>Mouse</b>: Used to interact with menus<br/>
-                <b>I</b>: Access your Inventory.<br/>
-                <b>Esc or P</b>: Pause/Resume the game<br/>
+                <b>Arrow Keys / WASD</b>: Controls Movement<br/>
             </p>
         </p>
         <p>
