--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             </p>
             <h5>Controls</h5>
             <p>
-                <b>Arrow Keys</b>: Controls Movement<br/>
+                <b>I / E</b>: Access your Inventory.<br/>
+                <b>Esc / P</b>: Pause/Resume the game<br/>
                 <b>Mouse</b>: Used to interact with menus<br/>
-                <b>I</b>: Access your Inventory.<br/>
-                <b>Esc or P</b>: Pause the game<br/>
+                <b>Arrow Keys / WASD</b>: Controls Movement<br/>
             </p>
             <h5>Features</h5>
             <p>
@@ -38,7 +38,7 @@
             </p>
                 <b>Click the image below to begin your quest!</b>
             
-            <img src='content/images/tiny32.png' onclick="window.open('francisquest.html')" style='cursor:pointer' />
+            <img src='content/images/francis-intro.png' onclick="window.open('francisquest.html')" style='cursor:pointer' />
              <p>
                  This is a game written entirely in Javascript with no 3rd party game engine libraries<br/>
                 <a href="https://github.com/atolVerderben/FrancisQuest">GitHub Repository</a></br/>
