Incrase damage with each level.

--- a/francisquest.html
+++ b/francisquest.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>
-        Francis Quest
+        FQ - Game
     </title>
     <link rel="stylesheet" href="content/css/francis.css"/>
     <link href="content/css/modal.css" type="text/css" rel="stylesheet" />
