Reduced game down to one page. Cleaned up looks a bit.

--- a/not_found.html
+++ b/not_found.html
@@ -6,7 +6,15 @@
      <link rel="stylesheet" href="content/css/francis.css"/>
   </head>
   <body>
+    <div id="mainOuter">
+      <div id="inner" style="text-align:center">
+        <br/><br/>
+    <img src="content/images/not_found.png" />
     <h1>Page Not Found</h1>
     <p>The requested page was not found.</p>
+    <br/>
+    <a href="index.html">Return to Home</a>
+    </div>
+    </div>
   </body>
 </html>
