Mostly added functions to the optional go server. Moved JS files to head of the html with defer keyword.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
     <title>
         Francis Quest
     </title>
     <link rel="stylesheet" href="content/css/francis.css"/>
     <link href="content/css/modal.css" type="text/css" rel="stylesheet" />
-<meta charset="UTF-8">
+    <!-- scripts -->
+    <script src="content/js/common/jquery-1.11.3.min.js" defer></script>
+    <script src="content/js/common/modal.js" defer></script>
+    <script src="content/js/vector2d.js" defer></script>
+    <script src="content/js/init.js" defer></script>
+    <script src="content/js/rectangle.js" defer></script>
+    <script src="content/js/camera.js" defer></script>
+    <script src="content/js/inventory.js" defer></script>
+    <script src="content/js/item.js" defer></script>
+    <script src="content/js/player.js" defer></script>
+    <script src="content/js/enemy.js" defer></script>
+    <script src="content/js/button.js" defer></script>
+    <script src="content/js/battlescene.js" defer></script>
+    <script src="content/js/map.js" defer></script>
+    <script src="content/js/textwriter.js" defer></script>
+    <script src="content/js/francisquest.js" defer></script>
 </head>
 <body id="MAIN">
     <div id="mainOuter">
@@ -106,24 +122,14 @@
         <div style="text-align:center;text-decoration:underline;color:#597dce;cursor:pointer" onclick="Game.togglePause()">
             Resume
         </div>
+        <br/>
+        <br/>
+        <div style="text-align:center;text-decoration:underline;color:#597dce;cursor:pointer" onclick="Game.reset()">
+            Restart
+        </div>
     </div>
 </body>
 
 </html>
 
 
-<script src="content/js/common/jquery-1.11.3.min.js"></script>
-<script src="content/js/common/modal.js"></script>
-<script src="content/js/vector2d.js"></script>
-<script src="content/js/init.js"></script>
-<script src="content/js/rectangle.js"></script>
-<script src="content/js/camera.js"></script>
-<script src="content/js/inventory.js"></script>
-<script src="content/js/item.js"></script>
-<script src="content/js/player.js"></script>
-<script src="content/js/enemy.js"></script>
-<script src="content/js/button.js"></script>
-<script src="content/js/battlescene.js"></script>
-<script src="content/js/map.js"></script>
-<script src="content/js/textwriter.js"></script>
-<script src="content/js/francisquest.js"></script>
